examples/test/testpolicy15619.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15619
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key39: value20
      key28: value35
      key26: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value30
          key21: value26
          key6: value31
